<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchVegeterian"
            android:layout_width="132dp"
            android:layout_height="149dp"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:switchPadding="0dp"
            android:text="@string/vegeterian"
            android:textAlignment="center"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|fill"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/time_date_choose" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|center_vertical"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/date_picker_actions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/date_btn" />

                    <Button
                        android:id="@+id/time_picker_actions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_btn" />
                </LinearLayout>

                <TextView
                    android:id="@+id/numOfSits"
                    android:layout_width="match_parent"
                    android:layout_height="41dp"
                    android:text="@string/sit_num_0" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <Button
            android:id="@+id/minusSit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_1_minus_sit" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/enter_number_of_people_sit" />

            <TextView
                android:id="@+id/txtNumSit"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_0_sit_beginning" />
        </LinearLayout>

        <Button
            android:id="@+id/plusSit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_1_plus_sit" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="147dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/reserveSits"
            android:layout_width="wrap_content"
            android:layout_height="202dp"
            android:layout_weight="1"
            android:text="@string/reserve_sits_btn" />
    </LinearLayout>

</LinearLayout>