<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="201dp"
            android:layout_height="130dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/big_mac" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/big_mac_menu" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="231dp"
            android:layout_height="130dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/quarter_pounder_cheeze_deluxe" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/quarter_pounder_menu" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="158dp"
            android:layout_height="130dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/coka_cola" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/coka_cola_menu" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="176dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/diet_coke" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="139dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cola_diet_menu" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonToPayment"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/order_place" />

</LinearLayout>




